# lena_v2

./: .gitignore  Cargo.toml  README.md  build.sh  hello.ln  lena.toml  main.ln
example/: lena.toml  main.ln  other.ln
example2/: lena.toml  magic.ln  main.ln
magic/: Cargo.toml
magic/src/: lib.rs
src/: component.rs  lexer.rs  main.rs  parser.rs  token.rs
