[package]
name = "lena"
version = "0.1.0"
edition = "2021"
default-run = "lena"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
magic = { path = "./magic" }


clap = { version = "4.4.18", features = ["derive"] }
toml = "0.8.10"
workspace = { members = ["magic"] }
serde = { version = "1.0.196", features = ["derive"] }
